@@ -296,7 +296,9 @@ int cl_r2k::inst_mul(t_mem code) {
 
 int cl_r2k::inst_rl_de(t_mem code) {
   unsigned int oldcarry = (regs.F & BIT_C);
-  regs.F = (regs.F & ~BIT_C) | (((regs.DE >> 15) & 1U) << BITPOS_C);
+  
+  regs.F &= ~BIT_ALL;
+  regs.F |= (((regs.DE >> 15) & 1U) << BITPOS_C);
   regs.DE = (regs.DE << 1) | (oldcarry >> BITPOS_C);
   
   if (regs.DE & 0x8000)
@@ -310,7 +312,9 @@ int cl_r2k::inst_rl_de(t_mem code) {
 
 int cl_r2k::inst_rr_de(t_mem code) {
   unsigned int oldcarry = (regs.F & BIT_C);
-  regs.F = (regs.F & ~BIT_C) | ((regs.DE & 1) << BITPOS_C);
+
+  regs.F &= ~BIT_ALL;
+  regs.F |= ((regs.DE & 1) << BITPOS_C);
   regs.DE = (regs.DE >> 1) | (oldcarry << (15 - BITPOS_C));
   
   if (regs.DE & 0x8000)
@@ -325,7 +329,9 @@ int cl_r2k::inst_rr_de(t_mem code) {
 int cl_r2k::inst_rr_hl(t_mem code)    // RR HL
 {
   unsigned int oldcarry = (regs.F & BIT_C);
-  regs.F = (regs.F & ~BIT_C) | ((regs.HL & 1) << BITPOS_C);
+  
+  regs.F &= ~BIT_ALL;
+  regs.F |= ((regs.HL & 1) << BITPOS_C);
   regs.HL = (regs.HL >> 1) | (oldcarry << (15 - BITPOS_C));
   
   if (regs.HL & 0x8000)
